# dnn-multiplication

./: AGENTS.md  README.md  pyproject.toml
docs/: 0.overview.md  1.formulation.md  2.number_representation.md
src/: __init__.py
