[project]
name = "dnn-multiplication"
version = "0.1.0"
description = "Experiments with neural networks for multiplication"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "jax",
    "flax",
    "chex",
    "optax",
    "orbax-checkpoint",
    "tqdm",
    "scipy",
    "scikit-learn",
    "seaborn",
    "pandas",
    "treescope",
    "pymoo",
    "ax-platform[mysql]",
    "optuna",
    "psutil",
    "perfetto",
    "protobuf",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
]
gpu = [
    "jax[cuda13]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
